src/test/compile-fail/match-vec-invalid.rs
fn main() {
    let a = ~[];
    match a {
        [1, ..tail, ..tail] => {}, //~ ERROR: unexpected token: `..`
        _ => ()
    }
}
